Fix contextual navigation on small screens
Floating the nav doesn't really work, there's not enough space for touch events for a start. I think we should look at treating these in a similar fashion to mainstream, the same way we did for policies.

--- a/app/assets/stylesheets/frontend/helpers/_contextual-info.scss
+++ b/app/assets/stylesheets/frontend/helpers/_contextual-info.scss
@@ -12,7 +12,6 @@
     overflow: hidden;
     
     li {
-      float: left;
       list-style-position: inside;
       padding-right: $gutter-half;
       padding-top: $gutter-one-sixth;
@@ -32,6 +31,7 @@
     
     @include media(tablet){
       overflow: visible;
+
       li {
         float: none;
         padding-right: 0;
